# rd-console

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.prebuilt  README.md  ROADMAP.md
backend/: README.md  pyproject.toml  run-dev-server.sh  run-e2e-server.sh
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  address_book.py  address_book_v2.py  api_token.py  audit_log.py  device.py  join_token.py  jwt_revocation.py  jwt_session.py  role.py  runtime_setting.py  system_metric.py  tag.py  user.py
backend/app/routers/: __init__.py  address_book.py  address_book_v2.py  api_tokens.py  auth.py  backup.py  devices.py  health.py  join.py  join_tokens.py  logs.py  roles.py  rustdesk.py  search.py  settings_.py  system.py  tags.py  updates.py  users.py
backend/app/services/: __init__.py  auto_tags.py  hbbs_sync.py  jwt_cleanup.py  metrics_sampler.py  rate_limit.py  server_info.py  trusted_ip.py  updates.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_address_book.py  test_address_book_v2.py  test_api_tokens.py  test_auth.py  test_authz.py  test_auto_tags.py  test_backup.py  test_config.py  test_devices.py  test_hbbs_sync.py  test_headless.py  test_health_hbbs.py  test_join.py  test_join_tokens.py  test_jwt_revocation.py  test_logs.py  test_logs_delete.py  test_rate_limit.py  test_roles.py  test_rustdesk.py  test_search.py  test_security_fixes.py  test_settings.py  test_system_metrics.py  test_tags.py  test_users.py
docs/: settings-brainstorm.md  v6-changelog.md
docs/design-refs/: A1-E2E-PLAYWRIGHT.md  A3-DASHBOARD.md  A3-WEBHOOKS.md  NOTES.md
docs/security/: audit-2026-05-01-0803.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/e2e/: auth.setup.ts  backup.spec.ts  devices.spec.ts  invite.spec.ts  login.spec.ts  tokens.spec.ts
frontend/public/: colors_and_type.css
frontend/public/console/: BACKEND.md  app.jsx  icons.jsx  pages.css  primitives.jsx  shell.css  shell.jsx
frontend/public/design/: components.css  layout.css  tokens.css
frontend/scripts/: build-prod.mjs  port-jsx.sh
frontend/src/: App.tsx  README.md  index.css  main.tsx
frontend/src/components/: Badge.tsx  Button.test.tsx  Button.tsx  Collapsible.test.tsx  Collapsible.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CopyableField.test.tsx  CopyableField.tsx  DataTable.test.tsx  DataTable.tsx  Dialog.test.tsx  Dialog.tsx  Drawer.test.tsx  Drawer.tsx  DropdownMenu.test.tsx  DropdownMenu.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Icon.tsx  Input.tsx  OnlineBadge.test.tsx  OnlineBadge.tsx  PageHeader.tsx  PlatformIcon.tsx  QRCode.tsx  Select.tsx  StatCard.tsx  Tabs.tsx  TagChip.test.tsx  TagChip.tsx  TagInput.tsx  Toast.tsx  Toggle.tsx  primitives.tsx
frontend/src/design/: components.css  layout.css  tokens.css
frontend/src/hooks/: useAddressBook.ts  useApiTokens.ts  useBackup.ts  useDevices.ts  useGlobalSearch.ts  (+6 more)
scripts/deployment/: diag-hbbs.sh  hbbs-schema.sh  pihole-add-rewrite.sh  rdc-apply-v4-compose.sh  rdc-compose-swap.sh  rdc-compose-up.sh  rdc-deploy-prebuilt.sh  rdc-deploy.sh  rdc-e2e-smoke.sh  rdc-fix-perms.sh  rdc-logs.sh  rdc-recreate-api.sh  rdc-smoke-address-book.sh  rdc-smoke-bulk-forget.sh  rdc-smoke-forget-panel-only.sh  rdc-smoke-forget.sh  rdc-smoke-legacy-login.sh  rdc-smoke-tokens.sh  rdc-smoke.sh
scripts/hbbs-watcher/: Dockerfile  entrypoint.sh  install-systemd.sh
(+102 files in other folders)
