[project]
name = "rd-console-backend"
version = "0.1.0"
description = "Self-hosted RustDesk Server admin panel — backend"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.5.0",
    # PyJWT replaces python-jose: the latter pulls `ecdsa` transitively
    # (open HIGH advisory: Minerva timing attack on P-256, no upstream
    # patch). We only sign JWTs with HS256 (HMAC) so ECDSA support was
    # dead weight anyway. PyJWT covers the same surface without that dep.
    "pyjwt>=2.8.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.12",
    # Cross-platform host metrics for /api/v1/system/metrics — CPU pct,
    # load avg, mem usage, network counters. Avoids hand-rolling /proc
    # parsing on Linux + getifaddrs on macOS + WMI on Windows.
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    # Long lines — we break at natural boundaries; sometimes a URL/SQL
    # fragment exceeds 100 chars and wrapping hurts readability.
    "E501",
    # "Class inherits from both str and Enum" — upstream Ruff wants StrEnum.
    # We stick with `class X(str, Enum)` because StrEnum changes `str(X.FOO)`
    # behavior (returns the value instead of "X.FOO"), which is a silent
    # semantic change for anything that logs enums. The current form is
    # supported on Python 3.11+ and works fine with SQLModel + Pydantic v2.
    "UP042",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
